--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class = "header">
 
             <nav>
-                <a href = "index.html"> <img src = "TCC Logo.png"> </a>           <!--Tcc's logo-->
+                <a href = "index.html"> <img src = "TCC Logo.png" alt = "TechnoCultural Club's Logo"> </a>           <!--Tcc's logo-->
 
                 <div class = "nav-links" id = "Nav_Links">                        <!--This division is created to give access buttons-->
 
