--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name = "viewport" content = "with = device-width, initial-scale = 1.0">
 
@@ -10,10 +10,6 @@
         <link rel = "stylesheet" href = "style.css">                             <!--Link for the CSS file-->
 
         <!--Link for fonts used in the website-->
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">                   
-
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,600&display=swap" 
         rel="stylesheet">                                                    
@@ -222,17 +218,17 @@
 
                 <div class = "faculty-col">
                    <a href = "https://www.linkedin.com/in/navaid-z-rizvi-ph-d-b46bb2b0?lipi=urn%3Ali%3Apage%3Ad_
-                   flagship3_profile_view_base_contact_details%3BpIMff4WZTtGlYVaypZX%2Fag%3D%3D">
+                   flagship3_profile_view_base_contact_details%3BpIMff4WZTtGlYVaypZX%2Fag%3D%3D" alt = "LinkedIn/DrNavaid.Z.Rizvi">
                         <h6> Dr. Navaid.Z.Rizvi (Placements Head)</h6> </a> 
                 </div>
 
                 <div class = "faculty-col">
-                    <a href = "https://www.linkedin.com/in/pankaj-kumar-7a45831a7/">
+                    <a href = "https://www.linkedin.com/in/pankaj-kumar-7a45831a7/" alt = "LinkedIn/DrVimleshKumarRay">
                         <h6> Dr. Vimlesh Kumar Ray (Placements Head)</h6> </a>
                 </div>
 
                 <div class = "faculty-col">
-                    <a href = "https://www.linkedin.com/in">
+                    <a href = "https://www.linkedin.com/in" alt = "LinkedIn/DrVidushiSharma">
                         <h6> Dr. Vidushi Sharma (HOD ECE Department)</h6> </a>
                 </div>
 
@@ -274,8 +270,8 @@
             <!--Each icon is a link to the social media handle's page -->
 
             <div class = "icons">
-                <a href = "https://www.instagram.com/techno.club_gbu/"> <i class="fa fa-instagram"> </i> </a> &nbsp&nbsp
-                <a href = "https://www.linkedin.com/company/80874650/admin/"></a><i class="fa fa-linkedin"></i>
+                <a href = "https://www.instagram.com/techno.club_gbu/" alt = "Instagram_TechnoClub"> <i class="fa fa-instagram"> </i> </a> &nbsp&nbsp
+                <a href = "https://www.linkedin.com/company/80874650/admin/" alt = "LinkedIn_TechnoClub"></a><i class="fa fa-linkedin"></i>
             </div>
 
             <br>
