--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@
 
                 <div class = "faculty-col">
                    <a href = "https://www.linkedin.com/in/navaid-z-rizvi-ph-d-b46bb2b0?lipi=urn%3Ali%3Apage%3Ad_
-                   flagship3_profile_view_base_contact_details%3BpIMff4WZTtGlYVaypZX%2Fag%3D%3D" alt = "LinkedIn/DrNavaid.Z.Rizvi">
+                   flagship3_profile_view_base_contact_details%3BpIMff4WZTtGlYVaypZX%2Fag%3D%3D" alt = "DrNavaid.Z.Rizvi">
                         <h6> Dr. Navaid.Z.Rizvi (Placements Head)</h6> </a> 
                 </div>
 
                 <div class = "faculty-col">
-                    <a href = "https://www.linkedin.com/in/pankaj-kumar-7a45831a7/" alt = "LinkedIn/DrVimleshKumarRay">
+                    <a href = "https://www.linkedin.com/in/pankaj-kumar-7a45831a7/" alt = "DrVimleshKumarRay">
                         <h6> Dr. Vimlesh Kumar Ray (Placements Head)</h6> </a>
                 </div>
 
                 <div class = "faculty-col">
-                    <a href = "https://www.linkedin.com/in" alt = "LinkedIn/DrVidushiSharma">
+                    <a href = "https://www.linkedin.com/in" alt = "DrVidushiSharma">
                         <h6> Dr. Vidushi Sharma (HOD ECE Department)</h6> </a>
                 </div>
 
