--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class = "header">
 
             <nav>
-                <a href = "index.html"> <img src = "TCC Logo.webp" alt = "TechnoCultural Club's Logo" width = "100"> </a>           <!--Tcc's logo-->
+                <a class = "logo_link" href = "index.html"> <img src = "TCC Logo.webp" class="navlogo" alt = "TechnoCultural Club's Logo" > </a>           <!--Tcc's logo-->
 
                 <div class = "nav-links" id = "Nav_Links">                        <!--This division is created to give access buttons-->
 
@@ -61,9 +61,7 @@
                     <br>
                     Add value to your resume and leverage your chances for cracking good 
                     placement.
-                    <br>
-                    <br>
-                    Register Yourself!
+                
                 </p>
 
                 <a href = "https://bit.ly/3J9kxMA" class = "hero-btn"> Click here to register! </a>      <!-- Button for registration link  -->
